e3lm/lang/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    AVAL
    COMMENT
    IMPORT
    NEWLINE
    NOT
    OR
    STRING_CONTINUE
    STRING_END
    STRING_START_SINGLE
    STRING_START_TRIPLE
    TERM
    UNIT
    WS

Grammar

Rule 0     S' -> master
Rule 1     master -> master block
Rule 2     master -> block
Rule 3     block -> CLSS NAME blockcontent END
Rule 4     block -> CLSS blockcontent END
Rule 5     block -> CLSS NAME END
Rule 6     block -> CLSS END
Rule 7     blockcontent -> blockcontent attr
Rule 8     blockcontent -> blockcontent block
Rule 9     blockcontent -> attr
Rule 10    blockcontent -> block
Rule 11    attr -> ATTR expr
Rule 12    attr -> BODY
Rule 13    expr -> expr PLUS term
Rule 14    expr -> expr MINUS term
Rule 15    expr -> term
Rule 16    term -> term TIMES factor
Rule 17    term -> term DIVIDE factor
Rule 18    term -> term TIMES TIMES factor
Rule 19    term -> term DIVIDE DIVIDE factor
Rule 20    term -> factor
Rule 21    factor -> NUM_INT
Rule 22    factor -> NUM_FLOAT
Rule 23    factor -> NUM_HEX
Rule 24    factor -> NUM_OCT
Rule 25    factor -> NUM_IMAG
Rule 26    factor -> NUM_BIN
Rule 27    factor -> PLUS factor
Rule 28    factor -> MINUS factor
Rule 29    factor -> LPAREN expr RPAREN
Rule 30    factor -> STRING
Rule 31    factor -> BOOL
Rule 32    factor -> NONE
Rule 33    factor -> identifier
Rule 34    factor -> func
Rule 35    func -> ID LPAREN funcargs RPAREN
Rule 36    func -> ID LPAREN RPAREN
Rule 37    funcargs -> funcargs COMMA expr
Rule 38    funcargs -> expr
Rule 39    identifier -> identifier LARRAY expr RARRAY
Rule 40    identifier -> identifier DOT ID
Rule 41    identifier -> func
Rule 42    identifier -> ID
Rule 43    arraydata -> arraydata COMMA expr
Rule 44    arraydata -> expr
Rule 45    factor -> LARRAY arraydata RARRAY
Rule 46    factor -> LARRAY arraydata COMMA RARRAY
Rule 47    factor -> LARRAY RARRAY
Rule 48    dictdata -> dictdata COMMA dictcouple
Rule 49    dictdata -> dictcouple
Rule 50    dictcouple -> expr COLON expr
Rule 51    dict -> LDICT dictdata RDICT
Rule 52    dict -> LDICT dictdata COMMA RDICT
Rule 53    dict -> LDICT RDICT
Rule 54    factor -> dict

Terminals, with rules where they appear

AND                  : 
ATTR                 : 11
AVAL                 : 
BODY                 : 12
BOOL                 : 31
CLSS                 : 3 4 5 6
COLON                : 50
COMMA                : 37 43 46 48 52
COMMENT              : 
DIVIDE               : 17 19 19
DOT                  : 40
END                  : 3 4 5 6
ID                   : 35 36 40 42
IMPORT               : 
LARRAY               : 39 45 46 47
LDICT                : 51 52 53
LPAREN               : 29 35 36
MINUS                : 14 28
NAME                 : 3 5
NEWLINE              : 
NONE                 : 32
NOT                  : 
NUM_BIN              : 26
NUM_FLOAT            : 22
NUM_HEX              : 23
NUM_IMAG             : 25
NUM_INT              : 21
NUM_OCT              : 24
OR                   : 
PLUS                 : 13 27
RARRAY               : 39 45 46 47
RDICT                : 51 52 53
RPAREN               : 29 35 36
STRING               : 30
STRING_CONTINUE      : 
STRING_END           : 
STRING_START_SINGLE  : 
STRING_START_TRIPLE  : 
TERM                 : 
TIMES                : 16 18 18
UNIT                 : 
WS                   : 
error                : 

Nonterminals, with rules where they appear

arraydata            : 43 45 46
attr                 : 7 9
block                : 1 2 8 10
blockcontent         : 3 4 7 8
dict                 : 54
dictcouple           : 48 49
dictdata             : 48 51 52
expr                 : 11 13 14 29 37 38 39 43 44 50 50
factor               : 16 17 18 19 20 27 28
func                 : 34 41
funcargs             : 35 37
identifier           : 33 39 40
master               : 1 0
term                 : 13 14 15 16 17 18 19

Parsing method: LALR

state 0

    (0) S' -> . master
    (1) master -> . master block
    (2) master -> . block
    (3) block -> . CLSS NAME blockcontent END
    (4) block -> . CLSS blockcontent END
    (5) block -> . CLSS NAME END
    (6) block -> . CLSS END

    CLSS            shift and go to state 3

    master                         shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> master .
    (1) master -> master . block
    (3) block -> . CLSS NAME blockcontent END
    (4) block -> . CLSS blockcontent END
    (5) block -> . CLSS NAME END
    (6) block -> . CLSS END

    CLSS            shift and go to state 3

    block                          shift and go to state 4

state 2

    (2) master -> block .

    CLSS            reduce using rule 2 (master -> block .)
    $end            reduce using rule 2 (master -> block .)


state 3

    (3) block -> CLSS . NAME blockcontent END
    (4) block -> CLSS . blockcontent END
    (5) block -> CLSS . NAME END
    (6) block -> CLSS . END
    (7) blockcontent -> . blockcontent attr
    (8) blockcontent -> . blockcontent block
    (9) blockcontent -> . attr
    (10) blockcontent -> . block
    (11) attr -> . ATTR expr
    (12) attr -> . BODY
    (3) block -> . CLSS NAME blockcontent END
    (4) block -> . CLSS blockcontent END
    (5) block -> . CLSS NAME END
    (6) block -> . CLSS END

    NAME            shift and go to state 5
    END             shift and go to state 7
    ATTR            shift and go to state 10
    BODY            shift and go to state 11
    CLSS            shift and go to state 3

    blockcontent                   shift and go to state 6
    attr                           shift and go to state 8
    block                          shift and go to state 9

state 4

    (1) master -> master block .

    CLSS            reduce using rule 1 (master -> master block .)
    $end            reduce using rule 1 (master -> master block .)


state 5

    (3) block -> CLSS NAME . blockcontent END
    (5) block -> CLSS NAME . END
    (7) blockcontent -> . blockcontent attr
    (8) blockcontent -> . blockcontent block
    (9) blockcontent -> . attr
    (10) blockcontent -> . block
    (11) attr -> . ATTR expr
    (12) attr -> . BODY
    (3) block -> . CLSS NAME blockcontent END
    (4) block -> . CLSS blockcontent END
    (5) block -> . CLSS NAME END
    (6) block -> . CLSS END

    END             shift and go to state 13
    ATTR            shift and go to state 10
    BODY            shift and go to state 11
    CLSS            shift and go to state 3

    blockcontent                   shift and go to state 12
    attr                           shift and go to state 8
    block                          shift and go to state 9

state 6

    (4) block -> CLSS blockcontent . END
    (7) blockcontent -> blockcontent . attr
    (8) blockcontent -> blockcontent . block
    (11) attr -> . ATTR expr
    (12) attr -> . BODY
    (3) block -> . CLSS NAME blockcontent END
    (4) block -> . CLSS blockcontent END
    (5) block -> . CLSS NAME END
    (6) block -> . CLSS END

    END             shift and go to state 14
    ATTR            shift and go to state 10
    BODY            shift and go to state 11
    CLSS            shift and go to state 3

    attr                           shift and go to state 15
    block                          shift and go to state 16

state 7

    (6) block -> CLSS END .

    CLSS            reduce using rule 6 (block -> CLSS END .)
    $end            reduce using rule 6 (block -> CLSS END .)
    END             reduce using rule 6 (block -> CLSS END .)
    ATTR            reduce using rule 6 (block -> CLSS END .)
    BODY            reduce using rule 6 (block -> CLSS END .)


state 8

    (9) blockcontent -> attr .

    END             reduce using rule 9 (blockcontent -> attr .)
    ATTR            reduce using rule 9 (blockcontent -> attr .)
    BODY            reduce using rule 9 (blockcontent -> attr .)
    CLSS            reduce using rule 9 (blockcontent -> attr .)


state 9

    (10) blockcontent -> block .

    END             reduce using rule 10 (blockcontent -> block .)
    ATTR            reduce using rule 10 (blockcontent -> block .)
    BODY            reduce using rule 10 (blockcontent -> block .)
    CLSS            reduce using rule 10 (blockcontent -> block .)


state 10

    (11) attr -> ATTR . expr
    (13) expr -> . expr PLUS term
    (14) expr -> . expr MINUS term
    (15) expr -> . term
    (16) term -> . term TIMES factor
    (17) term -> . term DIVIDE factor
    (18) term -> . term TIMES TIMES factor
    (19) term -> . term DIVIDE DIVIDE factor
    (20) term -> . factor
    (21) factor -> . NUM_INT
    (22) factor -> . NUM_FLOAT
    (23) factor -> . NUM_HEX
    (24) factor -> . NUM_OCT
    (25) factor -> . NUM_IMAG
    (26) factor -> . NUM_BIN
    (27) factor -> . PLUS factor
    (28) factor -> . MINUS factor
    (29) factor -> . LPAREN expr RPAREN
    (30) factor -> . STRING
    (31) factor -> . BOOL
    (32) factor -> . NONE
    (33) factor -> . identifier
    (34) factor -> . func
    (45) factor -> . LARRAY arraydata RARRAY
    (46) factor -> . LARRAY arraydata COMMA RARRAY
    (47) factor -> . LARRAY RARRAY
    (54) factor -> . dict
    (39) identifier -> . identifier LARRAY expr RARRAY
    (40) identifier -> . identifier DOT ID
    (41) identifier -> . func
    (42) identifier -> . ID
    (35) func -> . ID LPAREN funcargs RPAREN
    (36) func -> . ID LPAREN RPAREN
    (51) dict -> . LDICT dictdata RDICT
    (52) dict -> . LDICT dictdata COMMA RDICT
    (53) dict -> . LDICT RDICT

    NUM_INT         shift and go to state 22
    NUM_FLOAT       shift and go to state 23
    NUM_HEX         shift and go to state 24
    NUM_OCT         shift and go to state 25
    NUM_IMAG        shift and go to state 26
    NUM_BIN         shift and go to state 27
    PLUS            shift and go to state 18
    MINUS           shift and go to state 20
    LPAREN          shift and go to state 28
    STRING          shift and go to state 29
    BOOL            shift and go to state 30
    NONE            shift and go to state 31
    LARRAY          shift and go to state 34
    ID              shift and go to state 36
    LDICT           shift and go to state 37

    expr                           shift and go to state 17
    term                           shift and go to state 19
    factor                         shift and go to state 21
    identifier                     shift and go to state 32
    func                           shift and go to state 33
    dict                           shift and go to state 35

state 11

    (12) attr -> BODY .

    END             reduce using rule 12 (attr -> BODY .)
    ATTR            reduce using rule 12 (attr -> BODY .)
    BODY            reduce using rule 12 (attr -> BODY .)
    CLSS            reduce using rule 12 (attr -> BODY .)


state 12

    (3) block -> CLSS NAME blockcontent . END
    (7) blockcontent -> blockcontent . attr
    (8) blockcontent -> blockcontent . block
    (11) attr -> . ATTR expr
    (12) attr -> . BODY
    (3) block -> . CLSS NAME blockcontent END
    (4) block -> . CLSS blockcontent END
    (5) block -> . CLSS NAME END
    (6) block -> . CLSS END

    END             shift and go to state 38
    ATTR            shift and go to state 10
    BODY            shift and go to state 11
    CLSS            shift and go to state 3

    attr                           shift and go to state 15
    block                          shift and go to state 16

state 13

    (5) block -> CLSS NAME END .

    CLSS            reduce using rule 5 (block -> CLSS NAME END .)
    $end            reduce using rule 5 (block -> CLSS NAME END .)
    END             reduce using rule 5 (block -> CLSS NAME END .)
    ATTR            reduce using rule 5 (block -> CLSS NAME END .)
    BODY            reduce using rule 5 (block -> CLSS NAME END .)


state 14

    (4) block -> CLSS blockcontent END .

    CLSS            reduce using rule 4 (block -> CLSS blockcontent END .)
    $end            reduce using rule 4 (block -> CLSS blockcontent END .)
    END             reduce using rule 4 (block -> CLSS blockcontent END .)
    ATTR            reduce using rule 4 (block -> CLSS blockcontent END .)
    BODY            reduce using rule 4 (block -> CLSS blockcontent END .)


state 15

    (7) blockcontent -> blockcontent attr .

    END             reduce using rule 7 (blockcontent -> blockcontent attr .)
    ATTR            reduce using rule 7 (blockcontent -> blockcontent attr .)
    BODY            reduce using rule 7 (blockcontent -> blockcontent attr .)
    CLSS            reduce using rule 7 (blockcontent -> blockcontent attr .)


state 16

    (8) blockcontent -> blockcontent block .

    END             reduce using rule 8 (blockcontent -> blockcontent block .)
    ATTR            reduce using rule 8 (blockcontent -> blockcontent block .)
    BODY            reduce using rule 8 (blockcontent -> blockcontent block .)
    CLSS            reduce using rule 8 (blockcontent -> blockcontent block .)


state 17

    (11) attr -> ATTR expr .
    (13) expr -> expr . PLUS term
    (14) expr -> expr . MINUS term

    END             reduce using rule 11 (attr -> ATTR expr .)
    ATTR            reduce using rule 11 (attr -> ATTR expr .)
    BODY            reduce using rule 11 (attr -> ATTR expr .)
    CLSS            reduce using rule 11 (attr -> ATTR expr .)
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40


state 18

    (27) factor -> PLUS . factor
    (21) factor -> . NUM_INT
    (22) factor -> . NUM_FLOAT
    (23) factor -> . NUM_HEX
    (24) factor -> . NUM_OCT
    (25) factor -> . NUM_IMAG
    (26) factor -> . NUM_BIN
    (27) factor -> . PLUS factor
    (28) factor -> . MINUS factor
    (29) factor -> . LPAREN expr RPAREN
    (30) factor -> . STRING
    (31) factor -> . BOOL
    (32) factor -> . NONE
    (33) factor -> . identifier
    (34) factor -> . func
    (45) factor -> . LARRAY arraydata RARRAY
    (46) factor -> . LARRAY arraydata COMMA RARRAY
    (47) factor -> . LARRAY RARRAY
    (54) factor -> . dict
    (39) identifier -> . identifier LARRAY expr RARRAY
    (40) identifier -> . identifier DOT ID
    (41) identifier -> . func
    (42) identifier -> . ID
    (35) func -> . ID LPAREN funcargs RPAREN
    (36) func -> . ID LPAREN RPAREN
    (51) dict -> . LDICT dictdata RDICT
    (52) dict -> . LDICT dictdata COMMA RDICT
    (53) dict -> . LDICT RDICT

    NUM_INT         shift and go to state 22
    NUM_FLOAT       shift and go to state 23
    NUM_HEX         shift and go to state 24
    NUM_OCT         shift and go to state 25
    NUM_IMAG        shift and go to state 26
    NUM_BIN         shift and go to state 27
    PLUS            shift and go to state 18
    MINUS           shift and go to state 20
    LPAREN          shift and go to state 28
    STRING          shift and go to state 29
    BOOL            shift and go to state 30
    NONE            shift and go to state 31
    LARRAY          shift and go to state 34
    ID              shift and go to state 36
    LDICT           shift and go to state 37

    factor                         shift and go to state 41
    identifier                     shift and go to state 32
    func                           shift and go to state 33
    dict                           shift and go to state 35

state 19

    (15) expr -> term .
    (16) term -> term . TIMES factor
    (17) term -> term . DIVIDE factor
    (18) term -> term . TIMES TIMES factor
    (19) term -> term . DIVIDE DIVIDE factor

    PLUS            reduce using rule 15 (expr -> term .)
    MINUS           reduce using rule 15 (expr -> term .)
    END             reduce using rule 15 (expr -> term .)
    ATTR            reduce using rule 15 (expr -> term .)
    BODY            reduce using rule 15 (expr -> term .)
    CLSS            reduce using rule 15 (expr -> term .)
    RPAREN          reduce using rule 15 (expr -> term .)
    RARRAY          reduce using rule 15 (expr -> term .)
    COMMA           reduce using rule 15 (expr -> term .)
    COLON           reduce using rule 15 (expr -> term .)
    RDICT           reduce using rule 15 (expr -> term .)
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43


state 20

    (28) factor -> MINUS . factor
    (21) factor -> . NUM_INT
    (22) factor -> . NUM_FLOAT
    (23) factor -> . NUM_HEX
    (24) factor -> . NUM_OCT
    (25) factor -> . NUM_IMAG
    (26) factor -> . NUM_BIN
    (27) factor -> . PLUS factor
    (28) factor -> . MINUS factor
    (29) factor -> . LPAREN expr RPAREN
    (30) factor -> . STRING
    (31) factor -> . BOOL
    (32) factor -> . NONE
    (33) factor -> . identifier
    (34) factor -> . func
    (45) factor -> . LARRAY arraydata RARRAY
    (46) factor -> . LARRAY arraydata COMMA RARRAY
    (47) factor -> . LARRAY RARRAY
    (54) factor -> . dict
    (39) identifier -> . identifier LARRAY expr RARRAY
    (40) identifier -> . identifier DOT ID
    (41) identifier -> . func
    (42) identifier -> . ID
    (35) func -> . ID LPAREN funcargs RPAREN
    (36) func -> . ID LPAREN RPAREN
    (51) dict -> . LDICT dictdata RDICT
    (52) dict -> . LDICT dictdata COMMA RDICT
    (53) dict -> . LDICT RDICT

    NUM_INT         shift and go to state 22
    NUM_FLOAT       shift and go to state 23
    NUM_HEX         shift and go to state 24
    NUM_OCT         shift and go to state 25
    NUM_IMAG        shift and go to state 26
    NUM_BIN         shift and go to state 27
    PLUS            shift and go to state 18
    MINUS           shift and go to state 20
    LPAREN          shift and go to state 28
    STRING          shift and go to state 29
    BOOL            shift and go to state 30
    NONE            shift and go to state 31
    LARRAY          shift and go to state 34
    ID              shift and go to state 36
    LDICT           shift and go to state 37

    factor                         shift and go to state 44
    identifier                     shift and go to state 32
    func                           shift and go to state 33
    dict                           shift and go to state 35

state 21

    (20) term -> factor .

    TIMES           reduce using rule 20 (term -> factor .)
    DIVIDE          reduce using rule 20 (term -> factor .)
    PLUS            reduce using rule 20 (term -> factor .)
    MINUS           reduce using rule 20 (term -> factor .)
    END             reduce using rule 20 (term -> factor .)
    ATTR            reduce using rule 20 (term -> factor .)
    BODY            reduce using rule 20 (term -> factor .)
    CLSS            reduce using rule 20 (term -> factor .)
    RPAREN          reduce using rule 20 (term -> factor .)
    RARRAY          reduce using rule 20 (term -> factor .)
    COMMA           reduce using rule 20 (term -> factor .)
    COLON           reduce using rule 20 (term -> factor .)
    RDICT           reduce using rule 20 (term -> factor .)


state 22

    (21) factor -> NUM_INT .

    TIMES           reduce using rule 21 (factor -> NUM_INT .)
    DIVIDE          reduce using rule 21 (factor -> NUM_INT .)
    PLUS            reduce using rule 21 (factor -> NUM_INT .)
    MINUS           reduce using rule 21 (factor -> NUM_INT .)
    END             reduce using rule 21 (factor -> NUM_INT .)
    ATTR            reduce using rule 21 (factor -> NUM_INT .)
    BODY            reduce using rule 21 (factor -> NUM_INT .)
    CLSS            reduce using rule 21 (factor -> NUM_INT .)
    RPAREN          reduce using rule 21 (factor -> NUM_INT .)
    RARRAY          reduce using rule 21 (factor -> NUM_INT .)
    COMMA           reduce using rule 21 (factor -> NUM_INT .)
    COLON           reduce using rule 21 (factor -> NUM_INT .)
    RDICT           reduce using rule 21 (factor -> NUM_INT .)


state 23

    (22) factor -> NUM_FLOAT .

    TIMES           reduce using rule 22 (factor -> NUM_FLOAT .)
    DIVIDE          reduce using rule 22 (factor -> NUM_FLOAT .)
    PLUS            reduce using rule 22 (factor -> NUM_FLOAT .)
    MINUS           reduce using rule 22 (factor -> NUM_FLOAT .)
    END             reduce using rule 22 (factor -> NUM_FLOAT .)
    ATTR            reduce using rule 22 (factor -> NUM_FLOAT .)
    BODY            reduce using rule 22 (factor -> NUM_FLOAT .)
    CLSS            reduce using rule 22 (factor -> NUM_FLOAT .)
    RPAREN          reduce using rule 22 (factor -> NUM_FLOAT .)
    RARRAY          reduce using rule 22 (factor -> NUM_FLOAT .)
    COMMA           reduce using rule 22 (factor -> NUM_FLOAT .)
    COLON           reduce using rule 22 (factor -> NUM_FLOAT .)
    RDICT           reduce using rule 22 (factor -> NUM_FLOAT .)


state 24

    (23) factor -> NUM_HEX .

    TIMES           reduce using rule 23 (factor -> NUM_HEX .)
    DIVIDE          reduce using rule 23 (factor -> NUM_HEX .)
    PLUS            reduce using rule 23 (factor -> NUM_HEX .)
    MINUS           reduce using rule 23 (factor -> NUM_HEX .)
    END             reduce using rule 23 (factor -> NUM_HEX .)
    ATTR            reduce using rule 23 (factor -> NUM_HEX .)
    BODY            reduce using rule 23 (factor -> NUM_HEX .)
    CLSS            reduce using rule 23 (factor -> NUM_HEX .)
    RPAREN          reduce using rule 23 (factor -> NUM_HEX .)
    RARRAY          reduce using rule 23 (factor -> NUM_HEX .)
    COMMA           reduce using rule 23 (factor -> NUM_HEX .)
    COLON           reduce using rule 23 (factor -> NUM_HEX .)
    RDICT           reduce using rule 23 (factor -> NUM_HEX .)


state 25

    (24) factor -> NUM_OCT .

    TIMES           reduce using rule 24 (factor -> NUM_OCT .)
    DIVIDE          reduce using rule 24 (factor -> NUM_OCT .)
    PLUS            reduce using rule 24 (factor -> NUM_OCT .)
    MINUS           reduce using rule 24 (factor -> NUM_OCT .)
    END             reduce using rule 24 (factor -> NUM_OCT .)
    ATTR            reduce using rule 24 (factor -> NUM_OCT .)
    BODY            reduce using rule 24 (factor -> NUM_OCT .)
    CLSS            reduce using rule 24 (factor -> NUM_OCT .)
    RPAREN          reduce using rule 24 (factor -> NUM_OCT .)
    RARRAY          reduce using rule 24 (factor -> NUM_OCT .)
    COMMA           reduce using rule 24 (factor -> NUM_OCT .)
    COLON           reduce using rule 24 (factor -> NUM_OCT .)
    RDICT           reduce using rule 24 (factor -> NUM_OCT .)


state 26

    (25) factor -> NUM_IMAG .
